--- a/Lab7/app/src/main/res/layout/activity_main.xml
+++ b/Lab7/app/src/main/res/layout/activity_main.xml
@@ -7,4 +7,71 @@
     android:gravity="center"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="25dp"
+        android:text="Rechtwinkliges Dreieck Flächenberechnung "
+        android:textColor="#000"
+        android:textSize="34sp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Seitenlänge A Eingabe"
+        android:layout_marginHorizontal="30dp"
+        />
+
+
+
+    <EditText
+        android:id="@+id/a"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:padding="12dp"
+        android:inputType="numberDecimal"
+        android:layout_marginVertical="15dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Seitenlänge B Eingabe"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="15dp"
+        />
+
+
+
+    <EditText
+        android:id="@+id/b"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:padding="12dp"
+        android:inputType="numberDecimal"
+        />
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="15dp"
+        android:text="berechnen"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:text="Dreiecksfläche"
+        android:textSize="40sp"
+        />
+    <TextView
+        android:id="@+id/Ergebnis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="50sp"
+        />
 </LinearLayout>
